mission and teamonth is done, getting better

--- a/index.html
+++ b/index.html
@@ -6,15 +6,54 @@
     <title>Tea Cozy</title>
   </head>
   <body>
-    <div class="fixed"> <!--trying to make the header fixed and flex at the same time is very hard -->
-      <header>
-        <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png" alt="logo" height="50px">
-        <nav>
-          <span><a href="#mission">Mission</a></span>
-          <span><a href="#tea">Featured Tea</a></span>
-          <span><a href="#Location">Locations</a></span>
-        </nav>
-      </header>
+    <header>
+      <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png" alt="logo" height="50px">
+      <nav>
+        <span><a href="#mission">Mission</a></span>
+        <span><a href="#tea">Featured Tea</a></span>
+        <span><a href="#Location">Locations</a></span>
+      </nav>
+    </header>
+    <div class="page">
+      <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-mission-background.jpg" alt="mission" height="700px">
+      <div id="mission" class="mission">
+        <h2>Our Mission</h2>
+        <h4>Handpicked, Artisanally, Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+      </div>
+
+      <!--tea of the month-->
+    <div id="tea">
+      <div class="teaofthemonth">
+        <h2>Tea of the Month</h2>
+        <h4>What's Steeping at The Tea Cozy?</h4>
+      </div>
+      <div class="tom">
+        <div class="berry">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg" alt="">
+          <h4>Fall Berry Blitz Tea</h4>
+        </div>
+        <div class="rum">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg" alt="">
+          <h4>Spiced Rum Tea</h4>
+        </div>
+        <div class="donut">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg" alt="">
+          <h4>Seasonal Donuts</h4>
+        </div>
+        <div class="myrtle">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg" alt="">
+          <h4>Myrtle Ave Tea</h4>
+        </div>
+        <div class="bedford">
+          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg" alt="">
+          <h4>Bedford Bizarre Tea</h4>
+        </div>
+      </div>
+    </div>
+
+
+
+
     </div>
   </body>
 </html>
