--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
     <title>Tea Cozy</title>
   </head>
   <body>
+<!-- header-->
     <header>
       <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-tea-cozy-logo.png" alt="logo" height="50px">
       <nav>
         <span><a href="#mission">Mission</a></span>
         <span><a href="#tea">Featured Tea</a></span>
-        <span><a href="#Location">Locations</a></span>
+        <span><a href="#location">Locations</a></span>
       </nav>
     </header>
     <div class="page">
@@ -21,37 +22,65 @@
         <h4>Handpicked, Artisanally, Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
       </div>
 
-      <!--tea of the month-->
+<!--tea of the month-->
     <div id="tea">
-      <div class="teaofthemonth">
-        <h2>Tea of the Month</h2>
-        <h4>What's Steeping at The Tea Cozy?</h4>
-      </div>
-      <div class="tom">
-        <div class="berry">
-          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg" alt="">
-          <h4>Fall Berry Blitz Tea</h4>
+        <div class="teaofthemonth">
+          <h2>Tea of the Month</h2>
+          <h4>What's Steeping at The Tea Cozy?</h4>
         </div>
-        <div class="rum">
-          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg" alt="">
-          <h4>Spiced Rum Tea</h4>
-        </div>
-        <div class="donut">
-          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg" alt="">
-          <h4>Seasonal Donuts</h4>
-        </div>
-        <div class="myrtle">
-          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg" alt="">
-          <h4>Myrtle Ave Tea</h4>
-        </div>
-        <div class="bedford">
-          <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg" alt="">
-          <h4>Bedford Bizarre Tea</h4>
-        </div>
+        <div class="tom">
+          <div class="berry">
+            <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-berryblitz.jpg" alt="">
+            <h4>Fall Berry Blitz Tea</h4>
+          </div>
+          <div class="rum">
+            <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-spiced-rum.jpg" alt="">
+            <h4>Spiced Rum Tea</h4>
+          </div>
+          <div class="donut">
+            <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-donut.jpg" alt="">
+            <h4>Seasonal Donuts</h4>
+          </div>
+          <div class="myrtle">
+            <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-myrtle-ave.jpg" alt="">
+            <h4>Myrtle Ave Tea</h4>
+          </div>
+          <div class="bedford">
+            <img src="https://s3.amazonaws.com/codecademy-content/courses/freelance-1/unit-4/img-bedford-bizarre.jpg" alt="">
+            <h4>Bedford Bizarre Tea</h4>
+          </div>
       </div>
     </div>
-
-
+<!--location -->
+    <div id="location">
+      <h2>Locations</h2>
+      <div class="loco">
+        <div>
+          <h3>Downtown</h3>
+          <h4>384 West 4th St</h4>
+          <h4>Suite 108</h4>
+          <h4>Portland, Maine</h4>
+        </div>
+        <div>
+          <h3>East Bayside</h3>
+          <h4>3433 Phisherman's Avenue</h4>
+          <h4>(Northwest Corner)</h4>
+          <h4>Portland, Maine</h4>
+        </div>
+        <div>
+          <h3>Oakdale</h3>
+          <h4>515 Crescent Avenue</h4>
+          <h4>Second Floor</h4>
+          <h4>Portland, Maine</h4>
+      </div>
+    </div>
+    </div>
+<!-- contact info-->
+    <div class="contact">
+      <h2>The Tea Cozy</h2>
+      <h5>contact@theteacozy.command</h5>
+      <h5>917-555-8904</h5>
+    </div>
 
 
     </div>
