--- a/index.html
+++ b/index.html
@@ -78,10 +78,13 @@
 <!-- contact info-->
     <div class="contact">
       <h2>The Tea Cozy</h2>
-      <h5>contact@theteacozy.command</h5>
+      <h5>contact@theteacozy.com</h5>
       <h5>917-555-8904</h5>
     </div>
-
+<!-- foot-->
+    <footer>
+      <h5>copyright The Tea Cozy 2017</h5>
+    </footer>
 
     </div>
   </body>
